# PhytoVeda

./: .gitignore  CLAUDE.md  PHYTOVEDA_OVERVIEW.md  README.md  ROADMAP.md  instructions.md  pyproject.toml
configs/: hiervit_cmtl.yaml
notebooks/: phytoveda_colab.ipynb
src/phytoveda/: __init__.py
src/phytoveda/active_learning/: __init__.py  oracle.py  quarantine.py  uncertainty.py
src/phytoveda/api/: __init__.py  inference.py  server.py
src/phytoveda/colab/: __init__.py  data_cache.py  dataset_setup.py  drive.py  environment.py  training.py
src/phytoveda/conservation/: __init__.py  iucn.py
src/phytoveda/data/: __init__.py  augmentation.py  datasets.py  download.py  preprocessing.py  taxonomy.py
src/phytoveda/formulation/: __init__.py  validator.py
src/phytoveda/llm/: __init__.py  providers.py
src/phytoveda/models/: __init__.py  backbone.py  cmtl.py  heads.py  losses.py
src/phytoveda/rag/: __init__.py  indexer.py  report_generator.py  retriever.py
src/phytoveda/traceability/: __init__.py  events.py
src/phytoveda/training/: __init__.py  evaluation.py  trainer.py
src/phytoveda/vrikshayurveda/: __init__.py  mapper.py  treatments.yaml
tests/: test_active_learning.py  test_api.py  test_colab.py  test_colab_training.py  test_conservation.py  test_data.py  test_formulation.py  test_llm_providers.py  test_models.py  test_rag.py  test_traceability.py  test_training.py  test_uncertainty.py  test_vrikshayurveda.py
